--- a/automation/brightcove.conf
+++ b/automation/brightcove.conf
@@ -8,16 +8,16 @@
         name = Monthly Brightcove Report
         
         #Script or command you need to run
-        command = 'bash /home/minh/automation/brightcove/monthly_bc.sh'
+        command = 'bash /home/mbui/automation/brightcove/monthly_bc.sh'
         
         #If the job doesn't finish on given maxtime, the process will get killed
         maxtime = 1200 #seconds
         
         #Recipients who will get an email ONLY if job fails
-        fail_only_recipients = minh@decipherinc.com
+        fail_only_recipients = mbui@focusvision.com
         
         #Recipients who will get an email all the time
-        all_recipients = minh@decipherinc.com
+        all_recipients = mbui@focusvision.com
         
         #Job will fail if these strings are matched in stdout. They can be regular expressions
         error_list = 
